--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,28 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model List<Deck>
+@{
+    ViewBag.Title = "My Decks";
 }
 
+<h2>Deck List</h2>
+<a asp-controller="Deck" asp-action="Add">Add New Deck</a>
+<table class="table table-striped table-dark">
+    <thead>
+        <tr><th>Name</th><th>Count</th><th></th></tr>
+    </thead>
+    <tbody>
+        @foreach (var deck in Model)
+        {
+            <tr>
+                <td>@deck.DeckName</td>
+                <td>@deck.DeckCount</td>
 
+                <td>
+                    <a asp-controller="Deck" asp-action="Edit"
+                       asp-route-id="@deck.DeckID">Edit</a>
+                    <a asp-controller="Deck" asp-action="Delete"
+                       asp-route-id="@deck.DeckID">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
